--- a/output/pages/footer.html
+++ b/output/pages/footer.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8" />
 
 
-<link rel="stylesheet" type="text/css" href="./themes/static/css/style.css" />
+<link rel="stylesheet" type="text/css" href="../themes/static/css/style.css" />
 
 
 </head>
@@ -14,7 +14,7 @@
 
     <!-- Logo -->
     <header id="banner" class="body">
-            <h1><a href="./">Michael Appuhn <strong></strong></a></h1>
+            <h1><a href="../">Michael Appuhn <strong></strong></a></h1>
     </header><!-- /#banner -->
     <!-- End Logo -->
 
@@ -22,7 +22,7 @@
     <nav id="menu"><ul>
 
 
-        <li><a href="./pages/about.html">About</a></li>
+        <li><a href="../pages/about.html">About</a></li>
 
 
     </ul></nav><!-- /#menu -->
@@ -30,9 +30,10 @@
 
 
 
-<ul>
-    <li><a href="./category/misc.html">misc</a></li>
-</ul>
+    <h1>Footer</h1>
+    
+    <p>&copy; Michael Appuhn, 2016</p>
+
 
     <!-- Footer -->
     <footer id="contentinfo" class="body">
