--- a/output/index.html
+++ b/output/index.html
@@ -13,13 +13,12 @@
 <body id="index" class="home">
 
 
-    <!-- Logo -->
-    <header id="banner" class="body">
-            <h1><a href="./"><img src = "images/logo.svg" alt = "Michael Appuhn logotype" /></a></h1>
-    </header><!-- /#banner -->
-    <!-- End Logo -->    
+    
+    <header class="logo">
+        <a href="./"><img src = "/images/logo.svg" alt = "Michael Appuhn logotype" /></a>
+    </header>    
     <!-- Nav -->
-    <nav id="menu"><ul>
+    <nav class="navigation"><ul>
 
 
         <li><a href="./pages/about.html">About</a></li>
