Wrapped content div in base file for persistance. Copy-pasted current bobo-site text.

--- a/output/archives.html
+++ b/output/archives.html
@@ -29,12 +29,14 @@
 
 
 
+    <section class="content">
 <h1>Archives for Michael Appuhn</h1>
 
 <dl>
     <dt>Fri 15 April 2016</dt>
     <dd><a href="./test.html">Test</a></dd>
 </dl>
+    </section><!-- /#content -->
 
     <!-- Footer -->
     <footer id="contentinfo" class="body">
