--- a/output/categories.html
+++ b/output/categories.html
@@ -29,9 +29,11 @@
 
 
 
+    <section class="content">
 <ul>
     <li><a href="./category/misc.html">misc</a></li>
 </ul>
+    </section><!-- /#content -->
 
     <!-- Footer -->
     <footer id="contentinfo" class="body">
