--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -29,10 +29,12 @@
 
 
 
+    <section class="content">
     <h1>About</h1>
     
     <p>Hi, I'm Michael Appuhn and this is my website</p>
 
+    </section><!-- /#content -->
 
     <!-- Footer -->
     <footer id="contentinfo" class="body">
