--- a/output/authors.html
+++ b/output/authors.html
@@ -29,10 +29,12 @@
 
 
 
+    <section class="content">
     <h1>Authors on Michael Appuhn</h1>
 
     <ul>        <li><a href="./author/michael-appuhn.html">Michael Appuhn</a> (1)</li>
     </ul>
+    </section><!-- /#content -->
 
     <!-- Footer -->
     <footer id="contentinfo" class="body">
