--- a/output/pages/footer.html
+++ b/output/pages/footer.html
@@ -29,10 +29,12 @@
 
 
 
+    <section class="content">
     <h1>Footer</h1>
     
     <p>&copy; Michael Appuhn, 2016</p>
 
+    </section><!-- /#content -->
 
     <!-- Footer -->
     <footer id="contentinfo" class="body">
