--- a/output/tags.html
+++ b/output/tags.html
@@ -29,7 +29,9 @@
 
 
 
-    <h1>Tags for Michael Appuhn</h1>
+    <section class="content">
+    <h1>Tags for Michael Appuhn</h1>    </section><!-- /#content -->
+
     <!-- Footer -->
     <footer id="contentinfo" class="body">
             
