--- a/output/index.html
+++ b/output/index.html
@@ -38,11 +38,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <section class="content">
 	<h2 class="homepage-hi">&lsquo;ey</h2>
 
-	<p>I'm a product manager and UX designer, focused on funnel optimization for ecommerce brands. </p>
+	<p>Product Manager and UX designer, focused on funnel optimization for ecommerce brands. </p>
 
 	<p>I roll with <a target="_blank" href="http://othercreative.co/">Other Collective</a>. </p>
 
-	<p>Reach me via email at <a data-outbound-social="email" target="_blank" href="mailto:mike.appuhn@gmail.com">mike.appuhn@gmail.com</a>. I have nothing useful to contribute to <a target="_blank" data-outbound-social="twitter" href="https://twitter.com/michaelappuhn">Twitter</a> (who does, really, though?), share jokes to myself on <a target="_blank" data-outbound-social="instagram" href="https://instagram.com/michaelappuhn">Instagram</a>, and put my weirdo side projects on <a data-outbound-social="tumblr" href="https://michaelappuhn.tumblr.com">Tumblr</a>.</p>
+	<p>Reach me via email at <a data-outbound-social="email" target="_blank" href="mailto:mike.appuhn@gmail.com">mike.appuhn@gmail.com</a>. I have nothing useful to contribute to <a target="_blank" data-outbound-social="twitter" href="https://twitter.com/michaelappuhn">Twitter</a>, share jokes to myself with the world on <a target="_blank" data-outbound-social="instagram" href="https://instagram.com/michaelappuhn">Instagram</a>, and put my weirdo side projects on <a data-outbound-social="tumblr" href="https://michaelappuhn.tumblr.com">Tumblr</a>.</p>
 	
     </section><!-- /#content -->
 
