--- a/output/index.html
+++ b/output/index.html
@@ -30,20 +30,30 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     
     <header class="logo">
-        <a href="./"><img src = "/images/logo.svg" alt = "Michael Appuhn logotype" /></a>
+        <h1>Michael Appuhn</h1>
     </header>    
 
 
 
     <section class="content">
-	<h2 class="homepage-hi">&lsquo;ey</h2>
 
-	<p>Product Manager and UX designer, focused on funnel optimization for ecommerce brands. </p>
+	<h2 class="short-description">Product&nbsp;manager and UX&nbsp;strategist in New&nbsp;York&nbsp;City.</h2> 
 
-	<p>I roll with <a target="_blank" href="http://othercreative.co/">Other Collective</a>. </p>
+	<p>Funnel optimization for fashion ecommerce.</p>
 
-	<p>Reach me via email at <a data-outbound-social="email" target="_blank" href="mailto:mike.appuhn@gmail.com">mike.appuhn@gmail.com</a>. I have nothing useful to contribute to <a target="_blank" data-outbound-social="twitter" href="https://twitter.com/michaelappuhn">Twitter</a>, share jokes to myself with the world on <a target="_blank" data-outbound-social="instagram" href="https://instagram.com/michaelappuhn">Instagram</a>, and put my weirdo side projects on <a data-outbound-social="tumblr" href="https://michaelappuhn.tumblr.com">Tumblr</a>.</p>
+
+	<p>
 	
+		Visual dad jokes on <a target="_blank" data-outbound-social="instagram" href="https://instagram.com/michaelappuhn">Instagram</a>.
+		<br/>
+
+		Weirdo side projects on <a target="_blank" data-outbound-social="tumblr" href="https://michaelappuhn.tumblr.com">Tumblr</a>.
+		<br/>
+
+		Nothing useful to contribute to <a target="_blank" data-outbound-social="twitter" href="https://twitter.com/michaelappuhn">Twitter</a>. 
+	</p>
+
+	<p>Reach via email at <a data-outbound-social="email" target="_blank" href="mailto:mike.appuhn@gmail.com">mike.appuhn@gmail.com</a>.</p> 
     </section><!-- /#content -->
 
     <!-- Footer -->
