--- a/output/index.html
+++ b/output/index.html
@@ -25,7 +25,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5CXSL8R"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) --> 
-<script src="theme/js/three.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/three.js/88/three.min.js"></script>
 <script src="theme/js/cube.js"></script>
 
     
