made a proper pages situation, added a google form for contact

--- a/output/archives.html
+++ b/output/archives.html
@@ -11,6 +11,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
 
 <title>Michael Appuhn</title>
+<link rel="shortcut icon" href="theme/icon.ico" /> 
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -20,17 +21,18 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 </head>
 
-<body id="index" class="home"> 
+<body id="index" class="base"> 
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5CXSL8R"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) --> 
-<script src="theme/js/three.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/three.js/88/three.min.js"></script>
+<!--<script src="theme/js/three.min.js"></script>-->
 <script src="theme/js/cube.js"></script>
 
     
     <header class="logo">
-        <a href="./"><img src = "/images/logo.svg" alt = "Michael Appuhn logotype" /></a>
+        <a href="/">Michael Appuhn</a>
     </header>    
 
 
