--- a/output/footer/index.html
+++ b/output/footer/index.html
@@ -16,12 +16,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-<link rel="stylesheet" type="text/css" href="./theme/css/style.css" />
+<link rel="stylesheet" type="text/css" href="../theme/css/style.css" />
 
 
 </head>
 
-<body id="index" class="base"> 
+<body id="index" class="page footer"> 
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5CXSL8R"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -38,8 +38,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
     <section class="content">
-<ul>
-</ul>
+    <h1 class="page__title">Footer</h1>
+    
+    <p>&copy; Michael Appuhn, 2016</p>
+
     </section><!-- /#content -->
 
     <!-- Footer -->
