--- a/output/index.html
+++ b/output/index.html
@@ -21,7 +21,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 </head>
 
-<body id="index" class="home"> 
+<body id="index" class=" home "> 
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5CXSL8R"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -32,17 +32,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     
     <header class="logo">
-        <h1>Michael Appuhn</h1>
+        <a href="/">Michael Appuhn</a>
     </header>    
 
 
 
     <section class="content">
 
-	<h2 class="short-description">Product&nbsp;manager and UX&nbsp;strategist in New&nbsp;York&nbsp;City.</h2> 
+	<h1 class="short-description">Product&nbsp;manager and UX&nbsp;strategist in New&nbsp;York&nbsp;City.</h1> 
 
 	<p>Funnel optimization for fashion ecommerce.</p>
 
+	<p>Want to get in touch? <a href="contact">Contact Me</a>.</p> 
 
 	<p>
 	
@@ -55,7 +56,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		Nothing useful to contribute to <a target="_blank" data-outbound-social="twitter" href="https://twitter.com/michaelappuhn">Twitter</a>. 
 	</p>
 
-	<p>Reach via email at <a data-outbound-social="email" target="_blank" href="mailto:mike.appuhn@gmail.com">mike.appuhn@gmail.com</a>.</p> 
     </section><!-- /#content -->
 
     <!-- Footer -->
