--- a/output/contact/index.html
+++ b/output/contact/index.html
@@ -16,12 +16,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-<link rel="stylesheet" type="text/css" href="./theme/css/style.css" />
+<link rel="stylesheet" type="text/css" href="../theme/css/style.css" />
 
 
 </head>
 
-<body id="index" class="base"> 
+<body id="index" class="page contact"> 
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5CXSL8R"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -38,8 +38,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
     <section class="content">
-<ul>
-</ul>
+    <h1 class="page__title">Contact</h1>
+    
+    <p>Fill out the form below to discuss a project.</p>
+<p>Also connect with me on <a href="https://www.linkedin.com/in/michaelappuhn/" target="_blank">LikedIn</a>, follow me on <a href="https://instagram.com/michaelappuhn" target="_blank">Instagram</a>, or harrass me on <a href="https://twitter.com/michaelappuhn" target="_blank">Twitter</a>. Mostly boring on social, your results may vary.</p>
+<iframe class="google-form" src="https://docs.google.com/forms/d/e/1FAIpQLSfRWQn2uaIuo3M0hLCVzOEFeA8qsM6XoH2O7TzTFB4U1cTVaw/viewform?embedded=true" width="100%" height="1500px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+
     </section><!-- /#content -->
 
     <!-- Footer -->
