--- a/output/contact/index.html
+++ b/output/contact/index.html
@@ -41,7 +41,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <h1 class="page__title">Contact</h1>
     
     <p>Fill out the form below to discuss a project.</p>
-<p>Also connect with me on <a href="https://www.linkedin.com/in/michaelappuhn/" target="_blank">LikedIn</a>, follow me on <a href="https://instagram.com/michaelappuhn" target="_blank">Instagram</a>, or harrass me on <a href="https://twitter.com/michaelappuhn" target="_blank">Twitter</a>. Mostly boring on social, your results may vary.</p>
+<p>Also connect with me on <a href="https://www.linkedin.com/in/michaelappuhn/" target="_blank">LikedIn</a>, <a href="https://workingnotworking.com/michaelappuhn">WorkingNotWorking</a>, <a href="https://github.com/michaelappuhn">GitHub</a>, <a href="https://instagram.com/michaelappuhn" target="_blank">Instagram</a>, or <a href="https://twitter.com/michaelappuhn" target="_blank">Twitter</a>. Mostly boring on social, your results may vary.</p>
 <iframe class="google-form" src="https://docs.google.com/forms/d/e/1FAIpQLSfRWQn2uaIuo3M0hLCVzOEFeA8qsM6XoH2O7TzTFB4U1cTVaw/viewform?embedded=true" width="100%" height="1500px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
     </section><!-- /#content -->
