--- a/output/index.html
+++ b/output/index.html
@@ -39,9 +39,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <section class="content">
 
-	<h1 class="short-description">Product&nbsp;manager and UX&nbsp;strategist in New&nbsp;York&nbsp;City.</h1> 
+	<h1 class="short-description">Product&nbsp;manager and UX&nbsp;strategist in Los&nbsp;Angeles (formerly&nbsp;NYC).</h1> 
 
-	<p>Funnel optimization for fashion ecommerce.</p>
+	<p>
+	Product pipelines for cross-functional teams. <br />
+	Customer-focused strategy with a UX perspective. <br />
+	Research, analysis, design, and code.<br />
+	</p>
 
 	<p>Want to get in touch? <a href="contact">Contact Me</a>.</p> 
 
