--- a/output/index.html
+++ b/output/index.html
@@ -39,11 +39,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <section class="content">
 
-	<h1 class="short-description">Product&nbsp;manager and UX&nbsp;strategist in Los&nbsp;Angeles (formerly&nbsp;NYC).</h1> 
+	<h1 class="short-description">Product&nbsp;designer, manager, and strategist in Los&nbsp;Angeles (formerly&nbsp;NYC).</h1> 
 
 	<p>
-	Product pipelines for cross-functional teams. <br />
 	Customer-focused strategy with a UX perspective. <br />
+	Product pipelines for cross-functional teams. <br />
 	Research, analysis, design, and code.<br />
 	</p>
 
