removed NYC from my profile because I moved over a year ago :-)

--- a/output/index.html
+++ b/output/index.html
@@ -39,7 +39,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <section class="content">
 
-	<h1 class="short-description">Product&nbsp;designer, manager, and strategist in Los&nbsp;Angeles (formerly&nbsp;NYC).</h1> 
+	<h1 class="short-description">Product&nbsp;designer, manager, and strategist in Los&nbsp;Angeles.</h1> 
 
 	<p>
 	Customer-focused strategy with a UX perspective. <br />
