changed "tumblr" to "my blog," since I am removing tumblr features

--- a/output/index.html
+++ b/output/index.html
@@ -55,7 +55,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<br/>
 		Follow me on <a target="_blank" data-outbound-social="github " href="https://github.com/michaelappuhn">GitHub</a>.
 		<br/> 
-		Weirdo side projects on <a target="_blank" data-outbound-social="tumblr" href="https://michaelappuhn.tumblr.com">Tumblr</a>.
+		Weirdo side projects on <a target="_blank" data-outbound-social="tumblr" href="https://blog.michaelappuhn.com">my blog</a>.
 		<br/>
 
 	</p>
